--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
