--- a/frontend2/.env
+++ b/frontend2/.env
@@ -2,3 +2,5 @@
 VITE_API_BASE_URL=http://localhost:8000
 # VITE_API_BASE_URL=http://172.20.10.4:8000
 # VITE_API_BASE_URL=http://192.168.11.11:8000
+
+VITE_GOOGLE_MAPS_API_KEY=
